portfolio project master

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -21,6 +21,10 @@
         @include md-mobile{
             height: 500px;
         }
+
+        @include vs-mobile{
+            height: 250px;
+        }
        
         .Body{
             display: flex;
