--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -52,8 +52,10 @@
                 display: flex;
                 flex-direction: column;
                 width: 100%;
-                height: 60%;
+                height: 70%;
                 justify-content: space-evenly;
+                overflow: hidden;
+               
                 @media screen and (max-width:900px) {
                     width: 100%;
                     height: 100%;
@@ -61,12 +63,16 @@
                  }
                 
                 .item{
-                    
+                    width: 100%;
+                    height: 100%;
                     display: flex;
                     align-items: center;
                     margin-top: 20px;
                     margin-bottom: 30px;
-                    
+                    @include vs-mobile{
+                       width: 100%;
+                       padding: 10px 20px;
+                    }
                 }
             }
         }
@@ -117,6 +123,10 @@
                    
                     height: 20px;
                  }
+                 @include vs-mobile{
+                    margin-bottom: 10px;
+                    height: 40px;
+                }
             }
 
             textarea{
@@ -129,6 +139,9 @@
                 @media screen and (max-width:900px) {
                     height: 150px;
                  }
+                 @include vs-mobile{
+                    margin-bottom: 10px;
+                }
             }
 
             button{
