added github icon and fixes some image that not loaded

--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -5,10 +5,11 @@
     background: radial-gradient(circle, rgba(199,174,238,1) 0%, rgba(148,187,233,1) 100%); 
     display: flex;
     position: relative;
-   
+    
     @media screen and (max-width:900px) {
        flex-direction: column;
     }
+    
     .dark & {
         background: $dark-background;
         color: $dark-color;
@@ -20,19 +21,33 @@
         align-items: center;
         justify-content: center;
         color: rgb(255, 255, 255);
+        
         .dark & {
             background-color: $dark-background;
             color: $dark-color;
         }
         h2{
             font-size: 2vmax;
+            @include vs-mobile{
+                margin-top: 30px;
+            }
         }
         .icons{
-            &:hover{
-                opacity: 0.5;
-                cursor: pointer;
-            }
+            display: flex;
+            align-items: center;
+            justify-content: center;
             overflow: hidden;
+            .kiri{
+                margin-right: 20px;
+                &:hover{
+                    opacity: 0.5;
+                }
+            }
+            .kanan{
+                &:hover{
+                    opacity: 0.5;
+                }
+            }
         }
         .isi{
             width: 70%;
@@ -46,7 +61,7 @@
             @media screen and (max-width:900px) {
                 width: 80%;
                 height: 80%;
-                font-size: 10px;
+               
              }
             ul{
                 display: flex;
@@ -68,10 +83,10 @@
                     display: flex;
                     align-items: center;
                     margin-top: 20px;
-                    margin-bottom: 30px;
+                    overflow: hidden;
                     @include vs-mobile{
                        width: 100%;
-                       padding: 10px 20px;
+                       padding: 20px 10px;
                     }
                 }
             }
