overflow hidden on mode icon

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -56,6 +56,10 @@
                 padding: 5px 2em;
                 position: absolute;
                 
+                li {
+                    overflow:hidden;
+                }
+                
                 .dark & {
                     background-color: $dark-surface;
                     color: $dark-color;
