--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -47,6 +47,10 @@
                     opacity:0.5;
                 }
             }
+
+            li {
+                overflow: hidden;
+            }
            
             a {
                 text-decoration: none;
