margin top portfolio

--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -12,7 +12,7 @@
     }
     h2 {
         font-size: 36px;
-
+        margin-top: 2em;
         @include vs-mobile{
             font-size: 25px;
             margin-top: 40px;
